--- a/src/views/EmployeAllView/EmployeIndexView/index.less
+++ b/src/views/EmployeAllView/EmployeIndexView/index.less
@@ -1,6 +1,7 @@
 .topContainer {
     display: flex;
     justify-content: space-around;
+
     .cardInfo {
         width: 30%;
         background-color: #60b2dd;
@@ -57,10 +58,70 @@
                 cursor: pointer;
 
             }
-            .explain:hover{
+
+            .explain:hover {
                 color: #6995be;
             }
 
         }
     }
+}
+
+.card {
+    box-shadow: 1px 1px 10px 1px rgba(211, 211, 211, 0.351);
+    margin-bottom: 60px;
+}
+
+
+
+.content {
+    display: flex;
+    padding-top: 30px;
+    padding-bottom: 30px;
+
+    .explain {
+        padding-top: 5px;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow: hidden;
+        color: #909399;
+    }
+}
+
+.action {
+    display: flex;
+    background-color: #90939936;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    bottom: -1px;
+
+    .ant-btn {
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+        color: #7d7d7d;
+    }
+
+    .ant-btn:hover {
+        background-color: #cccccc7e;
+    }
+
+    .ant-btn:last-child {
+        position: relative;
+
+    }
+
+    .splitBtn {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 1px;
+        height: 20px;
+        margin-top: -8px;
+        background-color: #7d7d7d;
+    }
+
+
 }
