--- a/src/views/AttendanceView/employeClockControl/index.less
+++ b/src/views/AttendanceView/employeClockControl/index.less
@@ -33,7 +33,7 @@
             align-items: center;
 
             .morning {
-                color: #59adf8;
+                color: #79a0c9;
             }
 
             .after {
@@ -54,7 +54,7 @@
                 width: 215px;
 
                 .topTitle {
-
+              
                     display: flex;
                     align-items: center;
 
@@ -79,7 +79,7 @@
 
             .config {
 
-                color: #59adf8;
+                color: #79a0c9;
                 cursor: pointer;
             }
         }
@@ -102,7 +102,7 @@
 
 
                 .titleNumber {
-                    color: #1ba1e2;
+                    color: #79a0c9;
                     font-size: 26px;
                 }
 
@@ -184,7 +184,7 @@
                 }
 
                 .topNumber {
-                    color: #1ba1e2;
+                    color: #79a0c9;
                     font-size: 18px;
                 }
             }
@@ -242,7 +242,7 @@
                     flex-direction: column;
 
                     .topTitle {
-                        color: #1ba1e2;
+                        color: #79a0c9;
 
                         .topNum {
                             font-weight: bold;
@@ -262,8 +262,8 @@
         }
 
         .mainInfo {
-            
-         
+
+
             margin: 0 30px 0;
         }
     }
