--- a/src/views/AttendanceView/showClockDeptInfo/index.less
+++ b/src/views/AttendanceView/showClockDeptInfo/index.less
@@ -10,6 +10,7 @@
     position: relative;
     z-index: 99;
     background-color: #fff;
+
     .avatar {
         margin-top: -25px;
         height: 90px;
@@ -41,6 +42,7 @@
         .clockInfo {
             color: #999999;
             margin-top: 10px;
+            cursor: pointer;
         }
 
         .mask {
