--- a/src/views/EvilControl/ChinaInfo/index.less
+++ b/src/views/EvilControl/ChinaInfo/index.less
@@ -21,13 +21,19 @@
         .infoCards {
             display: flex;
             flex-wrap: wrap;
-
+            justify-content: space-around;
 
             .infoCard {
                 text-align: center;
-                width: 23.566%;
+                width: 21.566%;
                 margin: 35px 40px 10px 40px;
                 height: 13vh;
+            }
+
+            .infoCard:nth-child(1),
+            .infoCard:nth-child(2) {
+                width: 25.566%;
+
             }
 
             .infoCard-title {
@@ -73,7 +79,7 @@
         box-shadow: 2px 2px 10px 2px rgba(203, 201, 201, 0.384);
         flex: 1;
         margin-left: 30px;
-   
+
     }
 
 
