--- a/src/views/EvilControl/CompanyInfo/index.less
+++ b/src/views/EvilControl/CompanyInfo/index.less
@@ -4,8 +4,8 @@
     flex-wrap: wrap;
     width: 550px;
     border-radius: 5px;
-    box-shadow: 2px 4px 8px 2px rgba(136, 134, 134, 0.19);
-    border: 1px solid rgba(128, 128, 128, 0.27);
+    box-shadow: 2px 4px 8px 2px rgba(213, 213, 213, 0.19);
+    border: 1px solid rgba(128, 128, 128, 0.097);
 
     .header {
         padding: 30px;
@@ -53,7 +53,7 @@
     text-align: center;
     font-size: 16px;
     margin-bottom: -1px;
-    background-color: #f56c6c;
+    background-color: rgba(236, 69, 69, 0.81);
     font-weight: bold;
     letter-spacing: 4px;
     position: relative;
@@ -70,7 +70,7 @@
     text-align: center;
     font-size: 16px;
     margin-bottom: -1px;
-    background-color: #6fd0a0;
+    background-color: #2a9938;
     font-weight: bold;
     letter-spacing: 4px;
     position: relative;
